<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.example.glauber.atv_03.Tela1Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/et_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:text="@string/detalhes_da_conta"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/sb_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rd_contaprivada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/conta_privada" />

        <RadioButton
            android:id="@+id/rd_contapublica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:text="@string/conta_p_blica" />

    </RadioGroup>


    <CheckBox
        android:id="@+id/cb_ativarconta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:text="@string/ativar_conta" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/textSize"
        android:text="@string/salvar_dados" />

</LinearLayout>
